2007-05-13  Andy Wingo  <wingo@pobox.com>

	* h2def.py (get_type_pat): In method detection, require that the
	"object" type have a trailing *. Fixes incorrect detection of e.g.
	atk_role_get_name as a method wrapper, because otherwise you can't
	tell a difference between a pointer type and a scalar.

	* h2def.py: Add a command line argument --no-methods to disable
	the code that automatically tries to detect methods. Useful for
	example when generating glib defs.

2007-05-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.91 ==

2007-05-10  Andy Wingo  <wingo@pobox.com>

	* scripts/maint/prepare-news-entry (len): Use minimal matching on
	the changelog diff so that we just return the most recent
	changelog entries.

2007-05-06  Andy Wingo  <wingo@pobox.com>

	* common.mk (PKG_PATH): Fix PKG_PATH statement, pointed out by
	Mark Flacy.

2007-05-05  Andy Wingo  <wingo@pobox.com>

	* autogen-pkg.sh: Depend on g-wrap >= 1.9.8.

2006-12-18  Andy Wingo  <wingo@pobox.com>

	* scripts/maint/upload-to-ftp.gnu.org: Add the skeleton of a
	ftp-upload.gnu.org helper.

2006-12-17  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-gstreamer version 0.9.90 ==

2006-12-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.90 ==

2006-12-15  Andy Wingo  <wingo@pobox.com>

	* scripts/maint/prepare-release:
	* scripts/maint/make-release-note:
	* scripts/maint/commit-release: 
	* autogen-pkg.sh (release_manager): Update scripts. I hope they
	work!

2006-12-08  Andy Wingo  <wingo@pobox.com>

	* autogen-pkg.sh: Require the newly-released g-wrap 1.9.7.

2006-11-05  Andy Wingo  <wingo@pobox.com>

	* scripts/commit-from-changelog: New amazing script.

2006-10-26  Andy Wingo  <wingo@pobox.com>

	* autogen.sh: We seem to require bash for the moment.

2006-08-13  Andy Wingo  <wingo@pobox.com>

	* PACKAGES (guile-gnome-evolution-data-server): Add some more
	packages.

	* HACKING: 